src/objects/Office__c.object
<CustomObject>
    <description>This Object is used to store the office details.</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>This field is used to store the value of the address.</description>
        <label>Address 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>This field is used to store the value of the Address.</description>
        <label>Address 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the value of the Account.</description>
        <label>Chapter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Office</relationshipLabel>
        <relationshipName>Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field is used to store the value of the city</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is used to store the value of the country.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External RE record Id for upserting</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>General_Email_Address__c</fullName>
        <description>This field is used to store the email address.</description>
        <label>General Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Office_Id__c</fullName>
        <description>This field is used to store the value of the office id.</description>
        <label>Office Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Legal_Name__c</fullName>
        <description>This field is used to store the legal name of the office.</description>
        <label>Office Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>This field is used to store the value of the phone number.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referral_Email_Address__c</fullName>
        <description>This filed will be used to capture the referral email address</description>
        <label>Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field is used to store the value of the State.</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>This filed is used to store the website address of the office.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>This field is used to store the value of Zip Code.</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chapter__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>